# Tennnis-Champ-MGM-SYSTEM

./: .gitignore  CMakeLists.txt  MatchHistory.cpp  MatchHistory.h  Stack.h  TCMS  main.cpp  match_history.txt
TICKET SALES AND SPECTATOR MANAGEMENT/: TIcket_Spectator.cpp
TOURNAMENT SCHEDULING AND PLAYER PROGRESSION/: player_list.txt  scheduleMatches.hpp
data/: match_history.txt  player_list.txt  schedule.txt  ticket_sales.txt
include/: Match.h  MatchHistory.h  PlayerWithdrawalManager.h  Stack.h  TicketManager.h  playerPerformance.hpp  scheduleMatches.hpp
src/:  HANDLING PLAYER WITHDRAWALS.cpp  Match.cpp  MatchHistory.cpp  PlayerWithdrawalManager.cpp  TicketManager.cpp  main match history.cpp  main schdule.cpp  main.cpp  playerPerformance.cpp  scheduleMatches.cpp
